# SteamUploader-rs

./: Cargo.toml  Makefile  README.md  mod-manifest.yaml
.github/workflows/: release.yml
manifest_schema/: mod-manifest-schema.json
src/: colors.rs  enums.rs  interact.rs  main.rs  manifest.rs
src/steam/: create.rs  delete.rs  load.rs  mod.rs  uploader.rs
test/example_manifests/: mod-manifest.json  mod-manifest.toml
test/example_mod/: manifest.example.json  manifest.example.toml  manifest.example.yaml  mod-manifest.example.toml  mod-manifest.example.yaml
