[package]
name = "SteamUploader"
description = "A simple tool to upload content to the Steam Workshop using Rust and the steamworks-rs library."
readme = "README.md"
repository = "https://github.com/SirDoggyJvla/SteamUploader-rs"
version = "0.1.0"
keywords = ["steam", "workshop", "uploader", "rust"]
categories = ["games"]
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steamworks = "0.13.0"