[package]
name = "SteamUploader"
description = "A simple tool to upload content to the Steam Workshop using Rust and the steamworks-rs library."
readme = "README.md"
repository = "https://github.com/SirDoggyJvla/SteamUploader-rs"
version = "0.1.0"
keywords = ["steam", "workshop", "uploader", "rust"]
categories = ["games"]
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
steamworks = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"